--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://kychataolena.github.io/goit-react-hw-07-phonebook",
+  "homepage": "https://kychataolena.github.io/goit-react-hw-08-phonebook",
   "dependencies": {
     "@emotion/styled": "^11.10.5",
     "@redux-devtools/extension": "^3.2.5",
@@ -15,6 +15,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.5",
+    "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
